// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexGrid allows the limitWidth prop to be unset 1`] = `
<styled.div
  limitWidth={false}
  outsideGutter={true}
  reverseLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  <div
    className="sc-eqUAAy dVBANZ"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gEvEer eomXnB"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;

exports[`FlexGrid can have limited width at various viewport sizes 1`] = `
<styled.div
  limitWidth={true}
  outsideGutter={true}
  reverseLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  <div
    className="sc-eqUAAy cwbvGa"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gEvEer eomXnB"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;

exports[`FlexGrid renders 1`] = `
<div
  class="sc-eqUAAy cwbvGa"
>
  <div
    class="sc-gEvEer eomXnB"
  >
    <div
      class="sc-aXZVg fEpJnR"
    >
      1st column content
    </div>
    <div
      class="sc-aXZVg fEpJnR"
    >
      2nd column content
    </div>
  </div>
</div>
`;

exports[`FlexGrid renders with no outside gutter 1`] = `
<styled.div
  limitWidth={true}
  outsideGutter={false}
  reverseLevel={
    Array [
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  <div
    className="sc-eqUAAy gcMtKk"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gEvEer eomXnB"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;

exports[`FlexGrid supports responsive reversal 1`] = `
<styled.div
  limitWidth={true}
  outsideGutter={true}
  reverseLevel={
    Array [
      true,
      true,
      true,
      false,
      true,
    ]
  }
>
  <div
    className="sc-eqUAAy cpCwrC"
  >
    <Row
      id="row-1"
    >
      <styled.div
        id="row-1"
        reverseLevel={
          Array [
            false,
            false,
            false,
            false,
            false,
          ]
        }
      >
        <div
          className="sc-gEvEer eomXnB"
          id="row-1"
        >
          <Col
            id="col-1"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-1"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-1"
              >
                1st column content
              </div>
            </styled.div>
          </Col>
          <Col
            id="col-2"
          >
            <styled.div
              gutter={true}
              hiddenLevel={
                Array [
                  false,
                  false,
                  false,
                  false,
                  false,
                ]
              }
              horizontalAlignLevel={
                Array [
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                  "inherit",
                ]
              }
              id="col-2"
              xs={true}
            >
              <div
                className="sc-aXZVg fEpJnR"
                id="col-2"
              >
                2nd column content
              </div>
            </styled.div>
          </Col>
        </div>
      </styled.div>
    </Row>
  </div>
</styled.div>
`;
